--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,18 @@
   "short_name": "Sober",
   "start_url": ".",
   "display": "standalone",
-  "background_color": "#ffffff",
-  "theme_color": "#3D4EAC"
+  "background_color": "#FFFFFF",
+  "theme_color": "#3D4EAC",
+  "icons": [
+    {
+      "src": "sober-icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    },
+    {
+      "src": "sober-icon-192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    }
+  ]
 }
